manifest/deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: batchops-frontend
  labels:
    app: batchops-frontend
spec:
  replicas: 1  # Number of pod replicas
  selector:
    matchLabels:
      app: batchops-frontend
  template:
    metadata:
      labels:
        app: batchops-frontend
    spec:
      containers:
        - name: batchops-frontend
          image: batchops_frontend:v2.2
          imagePullPolicy: IfNotPresent 
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
