manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: batchops-monitor
spec:
  selector:
    app: batchops-monitor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
