manifest/service_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: batchops-frontend
spec:
  selector:
    app: batchops-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
